Add investigation output; Maven plugin update